<resources>
    <string name="app_name">My Money</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="plus" translatable="false" />
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="plans">Plans</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THUR</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="new_event">New Event</string>
    <string name="next" translatable="false"><![CDATA[->]]></string>
    <string name="preview" translatable="false"><![CDATA[<-]]></string>
    <string name="choose_period">Choose period</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="period">Period…</string>
    <string name="dayInfo">8 February, Sunday</string>
    <string name="main">Main</string>
    <string name="categories">Categories</string>
    <string name="next_period" translatable="false">Next period</string>
    <string name="preview_period" translatable="false">Preview period</string>
    <string name="addnewevent" translatable="false">AddNewEvent</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="statistic">Statistic</string>
    <string name="enter_comment">Enter comment</string>
    <string name="enter_title_of_the_expense" translatable="false">Enter title of the expense</string>
    <string name="enter_expense">Enter expense</string>
    <string name="enter_category">Enter category</string>
    <string name="prise_check" translatable="false">Prise check</string>
    <string name="item_deleted">Item deleted</string>
    <string name="undo">UNDO</string>
    <string name="delete">Delete</string>
    <string name="change_operation">Change operation</string>
    <string name="add_operation">Add operation</string>
    <string name="spent">Spent</string>
    <string name="category">Category</string>
    <string name="comment">Comment</string>
    <string name="RUB" translatable="false">₽</string>
    <string name="_45" translatable="false">45</string>
    <string name="image" translatable="false">image</string>
    <string name="add">Add..</string>
    <string name="default_category">Another</string>
    <string name="Food">Food</string>
    <string name="House">House</string>
    <string name="Education">Education</string>
    <string name="Car">Transport</string>
    <string name="Health">Health</string>
    <string name="Sport">Sport</string>
    <string name="Fun">Fun</string>
    <string name="Other">Other</string>
    <string name="setIcon">Set Icon</string>
    <string name="chooseAColor">Choose a color</string>
    <string name="enterNameCategory">Enter name category</string>
    <string name="enterName">Name</string>
    <string name="add_category">Add category</string>
    <string name="other">Other</string>
    <string name="icon_error">First select the icon</string>
    <string name="_42">42%</string>
    <string name="total_spent_pie">Total was spent</string>
    <string name="todayyy">Today</string>
    <string name="change_category">Change category</string>
    <string name="color">Color</string>
    <string name="icon">Icon</string>
    <string name="a_u_sure">Are you sure?</string>
    <string name="a_u_sure_message">This action cannot be undone. All entries related to this category will be moved to the "Other" category</string>
    <string name="sure">Delete</string>
    <string name="not_sure">Cancel</string>
    <string name="helper">Enter the amount that you do not plan to spend more than within one month.</string>
    <string name="helper1">The scale on the main page will display your spending relative to this goal. This will give you a visual idea of how much you are spending.</string>
    <string name="yesterday">Yesterday</string>
    <string name="dark_mode_preference">Dark Mode Settings</string>
    <string name="entry_system_dark_mode">Follow System Dark Mode</string>
    <string name="entry_light_mode">Light Mode Selected</string>
    <string name="entry_dark_mode">Dark Mode Selected</string>
    <string name="entry_battery_dark_mode">Auto Battery Dark Mode</string>
    <string name="preferences">Basic settings</string>
    <string name="icon_preference">Icon Settings</string>
    <string name="classic_icon">Classic</string>
    <string name="emerald_icon">Emerald</string>
    <string name="purple_icon">Purple</string>
    <string name="patina_green_icon">Patina-Green</string>
    <string name="total_spent_pie_zero">There were no expenses</string>


</resources>