<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/mainFragment"
        android:icon="@drawable/baseline_money_24"
        android:title="@string/main"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@id/plansFragment"
        android:icon="@drawable/baseline_equalizer_24"
        android:title="@string/statistic" />
    <item
        android:id="@id/categoriesFragment"
        android:icon="@drawable/baseline_auto_awesome_motion_24"
        android:title="@string/categories" />
    <item
        android:id="@id/settingsFragment"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings" />
</menu>