<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preferences">

        <ListPreference
            app:key="dark_mode"
            app:icon="@drawable/baseline_brightness_6_24"
            app:title="@string/dark_mode_preference"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="1"
            app:entries="@array/dark_mode_entries"
            app:entryValues="@array/dark_mode_entries_values" />

        <ListPreference
            app:key="icon_choice"
            app:icon="@drawable/baseline_brush_24"
            app:title="@string/icon_preference"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="1"
            app:entries="@array/icon_entries"
            app:entryValues="@array/icon_entries_values" />

    </PreferenceCategory>



</PreferenceScreen>