<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/category_card_stat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners_ui"
    android:backgroundTint="@color/pastel_light_yellow"
    android:layout_margin="6dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@id/image_category"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:padding="4dp"
        android:background="@drawable/rounded_corners_ui"
        android:backgroundTint="@color/white"
        android:src="@drawable/car"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/image_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="12dp"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="22sp" />


    <TextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"

        android:text="@string/RUB"
        android:textSize="21sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/spent_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/currency"
        android:layout_marginEnd="5dp"

        android:text="@string/_45"
        android:textSize="21sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/percent_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spent_stat"
        android:layout_marginEnd="20dp"

        android:textSize="16sp"
        android:text="@string/_42"
        android:textColor="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>