<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    tools:context=".presentation.addevent.AddNewEventFragment">

    <EditText
        android:id="@+id/title"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:textSize="14sp"
        android:hint="@string/enter_title_of_the_expense"
        android:autofillHints="Expense"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />
    <EditText
        android:id="@+id/expense"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:textSize="14sp"
        android:hint="@string/enter_expense"
        android:autofillHints="category"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="LabelFor" />
    <EditText
        android:id="@+id/category"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:autofillHints="category"
        android:textSize="14sp"
        android:hint="@string/enter_category"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expense"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="LabelFor" />
    <EditText
        android:id="@+id/description"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:autofillHints="description"
        android:textSize="14sp"
        android:hint="@string/enter_description"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>