<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.statistics.StatisticFragment">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPreviewPeriod"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/preview_period"
            android:textSize="20sp"
            app:icon="@drawable/baseline_navigate_before_24"
            app:iconGravity="textStart" />

        <TextSwitcher
            android:id="@+id/date_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_weight="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dayInfo"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dayInfo"
                android:textSize="20sp" />
        </TextSwitcher>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNextPeriod"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/next_period"
            android:textSize="20sp"
            app:icon="@drawable/baseline_navigate_next_24"
            app:iconGravity="textEnd" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/periodGroup"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="3dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1">

        <RadioButton
            android:id="@+id/dayPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"

            android:gravity="center"
            android:text="@string/day"
            android:textColor="@color/radio_flat_text_selector" />

        <RadioButton
            android:id="@+id/weekPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"

            android:gravity="center"
            android:text="@string/week"
            android:textColor="@color/radio_flat_text_selector" />

        <RadioButton
            android:id="@+id/monthPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"

            android:gravity="center"
            android:text="@string/month"
            android:textColor="@color/radio_flat_text_selector" />

        <RadioButton
            android:id="@+id/yearPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"

            android:gravity="center"
            android:text="@string/year"
            android:textColor="@color/radio_flat_text_selector" />

        <RadioButton
            android:id="@+id/randomPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"

            android:gravity="center"
            android:text="@string/period"
            android:textColor="@color/radio_flat_text_selector" />

    </RadioGroup>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/statistic_piechart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/periodGroup" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/statisticsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statistic_piechart"
        tools:listitem="@layout/statistic_item_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>