<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.addnewcategory.AddNewCategoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/internalConstrainLayout1"
        app:circularflow_angles="10dp"
        app:circularflow_radiusInDP="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/my_custom_shape_soft"
        android:backgroundTint="@color/green7"
        android:padding="20dp">


        <TextView
            android:id="@+id/tvNameOfCatOperation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/add_category"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/tvSetIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNameOfCatOperation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:text="@string/setIcon"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <ImageView
            android:id="@id/image_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/car"
            app:layout_constraintTop_toBottomOf="@id/tvSetIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvColor"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tvColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:text="@string/chooseAColor"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoryColor"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvColor"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            tools:listitem="@layout/colors_horizontal_item_layout" />

        <TextView
            android:id="@+id/tvEnterName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoryColor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:text="@string/enterName"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/tvEnterNameCategory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEnterName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30sp"
            android:autofillHints="description"
            android:hint="@string/enterNameCategory"
            android:inputType="textCapSentences"
            android:textSize="14sp"
            tools:ignore="LabelFor" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/my_custom_shape_soft"

        android:backgroundTint="@color/green7"
        android:paddingHorizontal="100dp"

        android:paddingVertical="25dp"
        android:shadowColor="@color/green4"
        android:shadowRadius="7"
        android:text="@string/save" />


</androidx.constraintlayout.widget.ConstraintLayout>